--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,4 @@ tgcrypto
 youtube-search
 youtube-search-python
 git+https://github.com/yt-dlp/yt-dlp.git
+git+https://github.com/johntitus/heroku-buildpack-python-nodejs.git
