--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ aiohttp
 asyncio
 dnspython
 ffmpeg-python
-nodejs
+nodejs-python
 gitpython
 hachoir
 heroku3
@@ -23,4 +23,4 @@ tgcrypto
 youtube-search
 youtube-search-python
 git+https://github.com/yt-dlp/yt-dlp.git
-git+https://github.com/johntitus/heroku-buildpack-python-nodejs.git
+#git+https://github.com/johntitus/heroku-buildpack-python-nodejs.git
